# spike-nanomsg

./: .gitignore  LICENSE
nanomsg/demo/: device_demo.c  rpc_demo.c
spike/: CMakeLists.txt  broker.cpp  broker.h  broker_demo.cpp  bus.c  client.cpp  client.h  client_demo.cpp  node.cpp  node.h  readme.txt
spike/bus/: CMakeLists.txt  duplex.cpp  node.cpp  node.h  readme.txt  receive_demo.cpp  send_demo.cpp
spike/include/: data_mother.h  msg.h
spike/reqrep/: CMakeLists.txt  actor.h  client.cpp  client.h  client_demo.cpp  msg.h  readme.txt  request_reply.c  server.cpp  server.h  server_demo.cpp
